# ddc

./: .authorspellings  .gitignore  .mailmap  .travis.yml  HACKING  INSTALL  LICENSE  Makefile  RELEASE  Readme.md
churn/: Main.hs
demo/Parser/: Main.ds
demo/Tetra/: Lists.dct
doc/: HACKING  HACKING.md
doc/bugs/: current  squashed
doc/core-rules/: Exp.ott  Kind.ott  TyJudge.ott  Type.ott  core-ref.ott
doc/design/: Collections.txt  Curring.txt  Documentation.txt  Quantifiers.txt  Tuples.txt
doc/haddock/: Core-Bits.html  Core-Class-Instance.html  Core-Curry.html  Core-Effect-Expand.html  Core-Effect-MaskLocal.html  Core-Effect-Scrub.html  Core-Exp.html  Core-FreezeStatic.html  Core-Lift-AddFree.html  Core-Lift-Base.html  Core-Lift-BindTypes.html  Core-Lift-LiftP.html  Core-Lift-Patch.html  Core-Lift.html  Core-Optimise-FullLaziness.html  Core-Plate-FreeVars.html  Core-Plate-Trans.html  Core-Plate-TransStmts.html  Core-Plate.html  Core-Pretty.html  Core-SnipDown.html  Core-ToSea.html  Core-Unify.html  Core-Util.html  Evil-Chain.html  Main-Arg.html  Main-Compile.html  Main-Path.html  Main-Version.html  Main.html  Module-Export.html  Module-IO.html  Module-Interface.html  Module-Main.html  Module-Module.html  Module-Pretty.html  Sea-Ctor.html  Sea-Exp.html  Sea-Force.html  Sea-Match.html  (+163 more)
doc/notes/: ddc-howto.txt  map.ds
doc/specification/: Core.md
doc/syntax/: ComaWhite.tmTheme  Disciple Core.tmLanguage  Inky.tmTheme
doc/type/: Port.ds
docs/specification/: Core.md
freezer/: Cut.hs
make/: bits.hs  build.mk  build.mk.sample  config.mk  config.mk.sample  config.sh  flavour.mk  plate.mk  rules.mk  target.mk
make/config/: flavour.mk  options.mk  target.mk
make/goop/: getArch.sh
make/targets/: bin-ddc-check.mk  bin-ddc-main.mk  bin-ddci-core.mk  bin-ddci-tetra.mk  bin-smr.mk  clean.mk  ddc-alpha.mk  ddc-check.mk  ddc-main.mk  ddc.mk  ddci-core.mk  ddci-tetra.mk  docs.mk  external.mk  helper.mk  libs.mk  lint.mk  packages.mk  plate.mk  proof.mk  runtime.mk  setup.mk  tarball.mk  war.mk
proof/: Base.v  Bool.v  Cases.v  Context.v  EvJudge.v  Exp.v  Main.v  Makefile  Name.v  Preservation.v  Progress.v  TyJudge.v  TyJudgeExample.v
proof/DDC/: Base.v
proof/Poly/: Base.v  BaseCompare.v  BaseNat.v  BaseTactics.v  Env.v  EsJudge.v  Exp.v  KiJudge.v  Makefile  Preservation.v  Progress.v  SubstTypeType.v  SubstTypeValue.v  SubstValueValue.v  Ty.v  TyEnv.v  TyJudge.v  WellFormed.v
proof/PolyNamed/: Base.v  Context.v  LibTactics.v  Makefile  Name.v  Preservation.v  SubTypeType.v  Ty.v  TyJudge.v
proof/Simple/: Base.v  BaseCompare.v  BaseEnv.v  BaseNat.v  BaseTactics.v  (+19 more)
runtime/: Alloc.c  Alloc.ci  Alloc.h  Apply.c  Apply.h  Collect.c  Collect.ci  Collect.h  Config.c  Config.h  Context.c  Context.ci  Context.h  Debug.h  Dump.c  Dump.h  Error.c  Error.ci  Error.h  Eval.ci  EvalGen.hs  Force.c  Force.h  Foreign.h  Lint.c  Lint.h  Macro.h  Main.c  Main.h  Object.c  Object.h  Pointer.c  Pointer.h  Prim.ci  Prim.h  Profile.c  Profile.h  Runtime.ci  Runtime.h  State.c  (+4 more)
src/: Llvm.hs  LlvmM.hs  Main.hs  Util.hs
src/s1/ddc-core-discus/: ddc-core-tetra.cabal
src/s1/ddc-core-discus/DDC/Core/: Discus.hs
src/s1/ddc-core-discus/DDC/Core/Discus/: Check.hs  Compounds.hs  Convert.hs  Env.hs  Error.hs  Prim.hs  Profile.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Codec/Shimmer/: Decode.hs  Encode.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Convert/: Boxing.hs  Data.hs  Error.hs  Exp.hs  Layout.hs  Type.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Convert/Exp/: Alt.hs  Arg.hs  Base.hs  Ctor.hs  Lets.hs  Lit.hs  PrimArith.hs  PrimBoxing.hs  PrimCall.hs  PrimError.hs  PrimInfo.hs  PrimRecord.hs  PrimVector.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Convert/Type/: Base.hs  DaCon.hs  Data.hs  Kind.hs  Region.hs  Super.hs  Witness.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Prim/: Base.hs  DaConDiscus.hs  OpArith.hs  OpCast.hs  OpError.hs  OpFun.hs  OpInfo.hs  OpVector.hs  TyConDiscus.hs  TyConPrim.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Transform/: Boxing.hs  Curry.hs  Initialize.hs
src/s1/ddc-core-discus/DDC/Core/Discus/Transform/Curry/: Call.hs  CallSuper.hs  CallThunk.hs  Callable.hs  Error.hs
src/s1/ddc-core-machine/: README.md  ddc-core-machine.cabal
src/s1/ddc-core-machine/DDC/Core/Machine/: Env.hs  Prim.hs  Profile.hs
src/s1/ddc-core-machine/DDC/Core/Machine/Process/: Base.hs  Fuse.hs  Slurp.hs
src/s1/ddc-core-smr/: ddc-core-smr.cabal
src/s1/ddc-core-smr/DDC/Core/: SMR.hs
src/s1/ddc-core-smr/DDC/Core/SMR/Core/: Exp.hs
src/s1/ddc-source-discus/: LICENSE  ddc-source-discus.cabal
src/s1/ddc-source-discus/DDC/Source/Discus/: Convert.hs  DataDef.hs  Env.hs  Exp.hs  Lexer.hs  Module.hs  Parser.hs  Pretty.hs  Prim.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Collect/: FreeVars.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Convert/: Base.hs  Clause.hs  Error.hs  Prim.hs  Type.hs  Witness.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Exp/: Bind.hs  Binding.hs  Compounds.hs  DataDef.hs  Generic.hs  NFData.hs  Predicates.hs  Source.hs  Type.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Exp/Term/: Base.hs  Compounds.hs  NFData.hs  Predicates.hs  Pretty.hs  Prim.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Exp/Type/: Base.hs  Binding.hs  Compounds.hs  Exp.hs  NFData.hs  Predicates.hs  Pretty.hs  Prim.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Exp/Type/Prim/: TyConDiscus.hs  TyConPrim.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Parser/: Base.hs  Exp.hs  Module.hs  Param.hs  Type.hs  Witness.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Prim/: Base.hs  OpArith.hs  OpCast.hs  OpError.hs  OpFun.hs  OpVector.hs  TyCon.hs  TyConDiscus.hs  TyConPrim.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Transform/: BoundX.hs  Defix.hs  Expand.hs  Freshen.hs  Guards.hs  Matches.hs  Prep.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Transform/Defix/: Error.hs  FixTable.hs
src/s1/ddc-source-discus/DDC/Source/Discus/Transform/Freshen/: State.hs
test/: War.hs  readme  war.order
unit/: Main.hs
war/: Bits.hs  Diff.hs  Order.hs  TestSource.hs  War.hs
(+4706 files in other folders)
