Name:           ddc-core-smr
Version:        0.4.4.0
License:        MIT
License-file:   LICENSE
Author:         The Disciplined Disciple Compiler Strike Force
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Compilers/Interpreters
Homepage:       http://disciple.ouroborus.net
Synopsis:       Disciplined Disciple Compiler Shimmer code generator.
Description:    Disciplined Disciple Compiler Shimmer code generator.

Library
  Build-Depends: 
        base            >= 4.6    && < 4.10,
        array           >= 0.4    && < 0.6,
        deepseq         >= 1.3    && < 1.5,
        text            >= 1.0    && < 1.3,
        pretty-show     >= 1.6.8  && < 1.7,
        containers      == 0.5.*,
        transformers    == 0.5.*,
        mtl             == 2.2.1.*,
        ddc-core        == 0.4.4.*,
        ddc-core-salt   == 0.4.4.*,
        ddc-core-simpl  == 0.4.4.*,
        ddc-core-tetra  == 0.4.4.*


  Exposed-modules:
        DDC.Core.SMR
        DDC.Core.SMR.Core.Exp


  GHC-options:
        -Wall
        -fno-warn-orphans
        -fno-warn-missing-signatures
        -fno-warn-missing-methods
        -fno-warn-unused-do-bind

  Extensions:
        KindSignatures
        NoMonomorphismRestriction
        ScopedTypeVariables
        StandaloneDeriving
        PatternGuards
        ParallelListComp
        DeriveDataTypeable
        ViewPatterns
        BangPatterns
        GADTs
